# ResearchWorkSpace

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml  requirements.txt
.agent/: PLANS.md  execplan-template.md
.claude/: settings.json
artifacts/GraphWalker/: prior_works.json  sci_pattern.json  summary.md
docs/: Neo4j 科学发现图谱需求与技术方案.md  Paper-Wiki 技术方案_v1.md  Paper-Wiki 推荐Feed与审查体验优化-技术方案.md  Paper-Wiki 管理页面-需求文档.md  Paper-Wiki 需求文档.md  Paper-Wiki 首页整合与状态持久化-技术方案.md  Paper2Assets-设计方案.md  Paper2Blogs-技术方案.md  Paper2Recommend-技术方案.md  Paper2Search-技术方案.md  项目-需求文档.md
graph_state/: authors.json  authorships.json  papers.json  pattern_classifications.json  patterns.json  prior_work_relations.json
graph_updates/: checkpoint.json  graph_updates.jsonl
prompts/: blog_html_render_v1.py  candidate_summary_v1.py  paper_summary.py  paper_summary_v2.py  paper_summary_v3.py  pattern_taxonomy.json  prior_work_prompt.py  sci_pattern_classify_prompt.py
raw/2307.07697/: iclr2024_conference.bbl  iclr2024_conference.bib  iclr2024_conference.sty  iclr2024_conference.tex  section2_original.tex
raw/2410.16597/: 00README.json  custom.bib  iclr2026_conference.tex
raw/2508.00719/: main.bbl  main.bib  main.tex
raw/2508.00719/code/: 1_intro.tex  2_related.tex  4_method.tex  5_experiments.tex  6_conclusion.tex  7_appendix.tex
raw/2509.21035/: iclr2026_conference.bib  main.tex
raw/2602.21728/: iclr2026_conference.bib  iclr2026_conference.tex
raw/2602.21728/contents/: abstract.tex  appendix.tex  experimetents.tex  (+3 more)
raw/GraphWalker/: 00README.json  1.introduction.tex  2.related_work.tex  3.preliminaries.tex  4.methodology.tex  5.experiments.tex  6.appendix.tex  colm2026_conference.bib  colm2026_conference.tex
raw/Search-Self-Play/: 00README.json  googledeepmind.cls  main.bbl  main.tex  math_commands.tex
reports/: layer0_layer1_e2e_report.md
scripts/: convert_summary_figures.py
src/paper_wiki/: __init__.py
tests/integration/: test_discovery_fetch_flow.py  test_pipeline.py  test_web_ingest_flow.py
tests/unit/: test_assets_builder.py  test_candidate_summary.py  test_cli.py  test_config.py  test_cursor_render.py  test_discovery_arxiv_source.py  test_discovery_rate_limit.py  test_discovery_recommend.py  test_discovery_zotero_source.py  test_graph.py  test_job_manager.py  test_latex_parser.py  test_models.py  test_prior_works_backfill.py  test_progress_messages.py  test_summary_figure_converter.py  test_summary_generator.py  test_web_discovery_routes.py  test_web_paper_repository.py  test_web_routers.py  test_wechat_publishing.py
web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+100 files in other folders)
