[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-wiki"
version = "0.1.0"
description = "Layer0/Layer1 ingestion for a personal research paper wiki."
requires-python = ">=3.11"
dependencies = [
  "neo4j>=5.22.0",
  "openai>=1.40.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.1",
  "pymupdf>=1.24.0",
  "pypandoc_binary>=1.17",
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.111.0",
  "filelock>=3.14.0",
  "requests>=2.32.0",
  "typer>=0.12.3",
  "uvicorn[standard]>=0.30.0",
  "rich>=13.7.1",
  "numpy>=1.26.0",
  "pyzotero>=1.5.18",
  "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
]
web-dev = [
  "httpx>=0.27.0",
]
recommend = [
  "numpy>=1.26.0",
  "pyzotero>=1.5.18",
  "sentence-transformers>=3.0.0",
]

[project.scripts]
paper-wiki = "paper_wiki.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
